--- a/Todo-List App/templates/index.html
+++ b/Todo-List App/templates/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Erick Njagi">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="{{ url_for ('static', filename='./font-awesome/css/font-awesome.min.css') }}">
+    <!-- Styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ url_for ('static', filename='style.css') }}">
     
     <title>Todo App</title>
